# AI_Incident_Analyzer

./: .gitignore  README.md  a.py  app.py  b.py  first.py  incident_audit.db  main.py  problem_statements.txt  pyproject.toml  requirements.txt  second.py  steps.txt
